--- a/index.html
+++ b/index.html
@@ -1,46 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simmad AI</title>
-    <script src="script.js" defer></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #111;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        input {
-            width: 60%;
-            padding: 10px;
-            border-radius: 8px;
-            border: none;
-        }
-        button {
-            padding: 10px 20px;
-            margin-top: 10px;
-            border: none;
-            background: #00bfff;
-            color: white;
-            border-radius: 8px;
-        }
-        #response {
-            margin-top: 20px;
-            max-width: 80%;
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simmad AI Prototype 💬</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Simmad AI 💬</h1>
-    <input id="userInput" type="text" placeholder="Type your message..." />
-    <button onclick="sendMessage()">Send</button>
-    <div id="response"></div>
+  <div class="chat-container">
+    <div class="chat-header">
+      <h1>🤖 Simmad AI</h1>
+      <p>Your personal AI assistant</p>
+    </div>
+
+    <div class="chat-box" id="chat-box">
+      <div class="message bot">Welcome! Ask me anything 👋</div>
+    </div>
+
+    <div class="chat-input">
+      <input type="text" id="user-input" placeholder="Type your message..." autofocus>
+      <button id="send-btn">Send</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
